--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -10,7 +10,7 @@
   {{else}}
     <div class="form login-form" style="background-color:sandybrown;">
       <input type="text" name="username" placeholder="username">
-      <input type="text" name="password" placeholder="password">
+      <input type="password" name="password" placeholder="password">
       <div class="buttons">
         <button class="button login" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color:sandybrown;">Log in</button>
         <a class="button signup" href="/register" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color:sandybrown;">Signup</a>
@@ -19,7 +19,7 @@
     <div class="form signup-form" style="background-color:sandybrown;">
       <input type="text" name="username" placeholder="username">
       <input type="text" name="email" placeholder="email">
-      <input type="text" name="password" placeholder="password">
+      <input type="password" name="password" placeholder="password">
       <div class="buttons">
         <a class="button login" href="/" style="color:sandybrown; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Log In</a>
         <button class="button signup" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color:sandybrown;">Sign Up</button>
