--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -69,14 +69,14 @@
     </nav>
     {{/if}}
     {{{body}}}
-    <div class="home-page-footer" style="margin:10px; text-align:center;">
+   <div class="home-page-footer" style="margin:10px; text-align:center;">
         <nav class="nav-footer" style="background-color:rgb(226, 221, 221);">
             <div class="link-section-columns">
                 <div class="column">
                     <div class="footer-section">
                         <div class="title" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; letter-spacing:3.5px; color:rgb(240, 121, 16)">Support</div>
                         <a class="footer-link" title="ferMentor" aria-label="About ferMentor" href="/about" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">About
-                            ferMentor</a>
+                            FerMentor</a>
                         <br>
                         <a class="footer-link" title="Contact Us" aria-label="Contact Us" href="/about#contact" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serifl">Contact
                             Us</a>
@@ -86,32 +86,33 @@
                     <div class="column">
                         <div class="footer-section">
                             <div class="title" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; letter-spacing:3.5px; color:rgb(240, 121, 16)">Tools</div>
-                            <span class="footer-link" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">FAQs</span>
+                            <a class="footer-link" href="/FAQs" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">FAQs</a>
                         </div>
                     </div>
-
                     <div class="title social-media-title" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; letter-spacing:3.5px; color:rgb(240, 121, 16);">Follow
                         Us</div>
                     <div class="social-media-links"><a id="qa-social-facebook" href="https://facebook.com" title="ferMentor on Facebook"
                             aria-label="ferMentor on Facebook" target="_blank" rel="noopener nofollow"><span class="y-icon social-link-icon"
                                 data-icon="f"></span>
-                            <span class="screen-reader-text" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">ferMentor
-                                on Facebook</span></a>
-                        <br>
+                            <span class="screen-reader-text" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size:33px;">
+                                 <i class="fab fa-facebook" ></i></span></a>
+                        
                         <a id="qa-social-pinterest" href="https://pinterest.com" title="ferMentor on Pinterest" aria-label="ferMentor on Pinterest"
                             target="_blank" rel="noopener nofollow"><span class="y-icon social-link-icon" data-icon="p"></span><span
-                                class="screen-reader-text" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">ferMentor
-                                on Pinterest</span></a>
-                        <br>
+                                class="screen-reader-text" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size:33px;">
+                                 <i class="fab fa-pinterest"></i></span></a>
+                        
                         <a id="qa-social-instagram" href="https://instagram.com" title="ferMentor on Instagram" aria-label="ferMentor on Instagram"
                             target="_blank" rel="noopener nofollow"><span class="y-icon social-link-icon" data-icon="i"></span><span
-                                class="screen-reader-text" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">ferMentor
-                                on Instagram</span></a>
-                        <br>
+                                class="screen-reader-text" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size:33px;">
+                                 <i class="fab fa-instagram"></i></span></a>
+                        
                         <a id="qa-social-youtube" href="https://www.youtube.com" title="ferMentor on YouTube" aria-label="ferMentor on YouTube"
                             target="_blank" rel="noopener nofollow"><span class="y-icon social-link-icon" data-icon="u"></span><span
-                                class="screen-reader-text" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">ferMentor
-                                on YouTube</span></a></div>
+                                class="screen-reader-text" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size:33px;">
+                                 <i class="fab fa-youtube"></i></span></a></div>
+                                 <br>
+                                 
                 </div>
             </div>
     </div>
